objects/L2I_SCM_Confirmations__c.object
<CustomObject>
    <fields>
        <fullName>L2I_Build_Number__c</fullName>
        <label>Build Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Build_Series__c</fullName>
        <label>Build Series</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Component_Part_Description__c</fullName>
        <label>Component Part Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Component_Part_Number__c</fullName>
        <label>Component Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_Categories__c</fullName>
        <label>Feature Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Feature_Part_Numbers__c</fullName>
        <label>Feature Part Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Kit_Part_Description__c</fullName>
        <label>Kit Part Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Kit_Part_Number__c</fullName>
        <label>Kit Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Program_Number__c</fullName>
        <label>Program Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Related_DSS__c</fullName>
        <label>Related DSS</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_SCMDB_Release_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCMDB Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2I_SCM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Salesforce_Deal_Identifier__c</fullName>
        <label>Salesforce Deal Identifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Salesforce_Opportunity_Identifier__c</fullName>
        <label>Salesforce Opportunity Identifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SCM Confirmations</relationshipLabel>
        <relationshipName>SCM_Confirmations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>old_L2I_SCMDB_Release_Date__c</fullName>
        <label>SCMDB Release Date</label>
        <type>DateTime</type>
    </fields>
    <label>SCM Confirmation</label>
    <nameField>
        <displayFormat>SCM-{0000}</displayFormat>
        <label>SCM Confirmations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCM Confirmations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>